--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script src='/src/js/header-animation.js'></script>
+  <script src='https://muller.jecool.net/external-header.js'></script>
 </body>
 
 </html>
